[l10n] [l10n-sync] Synchronising with translation files from packages/po
r31399

--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -3,6 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of nn.po to Norwegian Nynorsk
 # translation of nn.po to Norwegian nynorsk
 # translation of debian-installer.po to Norwegian nynorsk
 # Norwegian Nynorsk messages for debian-installer.
@@ -14,15 +15,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-09-30 19:28+0200\n"
-"Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"PO-Revision-Date: 2005-10-15 20:16+0200\n"
+"Last-Translator: \n"
+"Language-Team: Norwegian Nynorsk <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Report-Msgid-Bugs-To: \n"
 "nynorsk@lists.debian.org>\n"
-"X-Generator: KBabel 1.10\n"
+"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -35,7 +36,6 @@ msgstr "Hald fram utan oppstartslastar"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -43,8 +43,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Nokre variablar må setjast i Pegasos OpenFirmware for at systemet ditt skal "
-"starta opp Debian automatisk. Ved slutten av installasjonen vil systemet "
-"starta på nytt. På kommandolinja til Pegasos OpenFirmware kan du slå på auto-"
+"starta opp automatisk. Ved slutten av installasjonen vil systemet starta på "
+"nytt. På kommandolinja til Pegasos OpenFirmware kan du slå på automatisk "
 "oppstart ved å setja desse OpenFirmware-variablane:"
 
 #. Type: note
@@ -67,7 +67,7 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
-"Alternativt, vil du vera i stand til å starta opp kjerna manuelt ved å "
+"Alternativt, vil du vere i stand til å starta opp kjerna manuelt ved å "
 "skriva inn:"
 
 #. Type: note
@@ -91,7 +91,6 @@ msgstr "Set opp maskinvarevariablar for automatisk oppstart."
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -100,9 +99,9 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Nokre variablar må setjast i maskinvara Netwinder NeTTrom for at systemet "
-"ditt skal starta opp Debian automatisk. Ved slutten av installasjonen vil "
-"systemet starta på nytt og maskinvara vil prøve å starta opp automatisk. Du "
-"kan avbryta dette ved å trykkja på ein tast. Du vil så bli kasta inn i "
+"ditt skal starta opp automatisk. Ved slutten av installasjonen vil systemet "
+"starta på nytt og maskinvara vil prøve å starta opp automatisk. Du kan "
+"avbryte dette ved å trykkja på ein tast. Du vil så bli kasta inn i "
 "kommandosystemet til NeTTrom der du må køyra desse kommandoane:"
 
 #. Type: note
@@ -126,14 +125,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Du vil måtte gjera dette berre ein gong. Etterpå skriv du inn «boot»-"
-"kommandoen eller start systemet på ny for å halda fram med det neste steget "
-"i debianinstallasjonen."
+"kommandoen eller start systemet på ny for å halde fram med det neste steget "
+"i installasjonen."
 
 #. Type: note
 #. Description
@@ -155,7 +153,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
