[l10n] [l10n-sync] Synchronising with translation files from packages/po
r31424

--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-05-22 22:12+0900\n"
+"PO-Revision-Date: 2005-10-17 21:37+0900\n"
 "Last-Translator:  Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team:  Korean <cwryu@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -29,17 +29,16 @@ msgstr "부트 로더 없이 계속"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"시스템이 자동 부팅하도록 만드려면 Pegasos OpenFirmware에 변수 몇 개를 설정해"
-"야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos "
-"OpenFirmware 프롬프트에서 다음 OpenFirmware 변수를 설정해서 자동 부팅을 켤 "
-"수 있습니다:"
+"리눅스로 자동 부팅하도록 만드려면 Pegasos OpenFirmware 변수 몇 개를 설정해야"
+"합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. Pegasos OpenFirmware"
+"프롬프트에서 OpenFirmware 변수를 다음과 같이 설정하면 자동부팅기능을 켤 수있"
+"습니다:"
 
 #. Type: note
 #. Description
@@ -83,7 +82,6 @@ msgstr "자동 부팅을 위한 펌웨어 변수 설정하기"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -91,10 +89,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"시스템이 데비안을 자동으로 부팅하도록 만드려면 Netwinder NeTTrom 펌웨어에 변"
-"수 몇 개를 설정해야 합니다. 설치가 다 끝나면, 시스템이 다시 시작하고, 펌웨어"
-"에서 자동 부팅을 시도합니다. 이 때 아무 키나 누르면 부팅을 중단시킬 수 있고, "
-"거기에 나오는 NeTTrom 명령어 시스템에서 다음 명령을 실행할 수 있습니다:"
+"리눅스로 자동 부팅하도록 만드려면  Netwinder NeTTrom 펌웨어의 변수 몇 개를설"
+"정해야 합니다. 설치가 다 끝나면 시스템이 다시 시작할 것입니다. 이 때 펌웨어가"
+"자동 부팅을 시도할텐데, 아무 키를 눌러서 자동부팅을 중단시키십시오. 이 때 "
+"NeTTrom 명령 시스템에서 다음 명령을 실행하십시오:"
 
 #. Type: note
 #. Description
@@ -117,13 +115,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"이 작업은 한 번만 하면 됩니다.  그 다음에 \"boot\" 명령을 입력하거나 시스템"
-"을 다시 시작해서 다음 데비안 설치 단계로 진행하십시오."
+"이 작업을 한 번만 하면 됩니다.  그 다음에 \"boot\" 명령을 입력하거나 시스템"
+"을 다시 시작해서 데비안 설치 다음 단계로 진행하십시오."
 
 #. Type: note
 #. Description
@@ -144,10 +141,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"수동으로 ${BOOT} 파티션의 ${KERNEL} 커널을 사용하고, 및 ${ROOT} 문자열을 커"
-"널 인수로 넘겨 부팅해야 할 것입니다."
+"수동으로 ${BOOT} 파티션의 ${KERNEL} 커널을 사용하고, ${ROOT} 문자열을 커널 인"
+"수로 넘겨 부팅해야 할 것입니다."
