--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -40,6 +40,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
+"Kelkaj variabloj en la firmvaro 'Pegasos OpenFirmware' bezonas agordaĵon por "
+"aŭtomate praŝargi linukson. La sistemo repraŝargiĝos post la instalado. "
+"Akomodu la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por "
+"aktivigi la aŭtomatan praŝargon."
 
 #. Type: note
 #. Description
@@ -50,13 +54,17 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr ""
+msgstr "Alimaniere, vi povos mane praŝargi la kernon per :"
 
 #. Type: note
 #. Description
@@ -68,13 +76,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "dum la firmvara 'OpenFirmware' invito"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Akomodi firmvarajn variablojn por aŭtomate praŝargi"
 
 #. Type: note
 #. Description
