--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -41,9 +41,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Kelkaj variabloj en la firmvaro 'Pegasos OpenFirmware' bezonas agordaĵon por "
-"aŭtomate praŝargi linukson. La sistemo repraŝargiĝos post la instalado. "
-"Akomodu la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por "
-"aktivigi la aŭtomatan praŝargon."
+"aŭtomate praŝargi linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
+"la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por aktivigi la "
+"aŭtomatan praŝargon."
 
 #. Type: note
 #. Description
@@ -94,6 +94,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"Kelkaj variabloj en la firmvaro 'Netwinder NeTTrom' bezonas agordaĵon por "
+"aŭtomate praŝargi linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
+"kaj la firmvaro strebos de ekfunkcii aŭtomate. Tiu ekfunkcio eble ĉesigu per "
+"tajpi ajnan klavon. Tiuokaze, vi alkondukos inviton de 'NeTTrom' kie vi "
+"plenumendos la sekvantajn ordonojn :"
 
 #. Type: note
 #. Description
@@ -106,6 +111,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
@@ -114,6 +125,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"Tiu ordono nur plenumendos unue. Poste tajpu la \"boot\" ordonon aŭ reŝargu "
+"la sistemon por procedi la venontan instaladan fazon."
 
 #. Type: note
 #. Description
