--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -3,6 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of fr-new.po to French
 # translation of d-i.po to French
 # translation of fr.po to French
 # French messages for debian-installer.
@@ -17,7 +18,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: debian-installer\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2005-08-23 10:48+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
