[l10n] [l10n-sync] Synchronising with translation files from packages/po
r31803

--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -64,7 +64,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alimaniere, vi povos mane praŝargi la kernon per :"
+msgstr "Alimaniere, vi povos mane praŝargi la kernon per enskribu :"
 
 #. Type: note
 #. Description
