--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -18,7 +18,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: fr\n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2005-08-23 10:48+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
