--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -19,11 +19,11 @@ msgstr ""
 "Project-Id-Version: d-i\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-23 10:48+0200\n"
+"PO-Revision-Date: 2005-11-18 07:40+0100\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 "X-Generator: KBabel 1.10.2\n"
@@ -33,7 +33,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Continuer sans programme de démarrage"
+msgstr "Continuer sans programme de dÃ©marrage"
 
 #. Type: note
 #. Description
@@ -44,11 +44,11 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Certaines variables doivent être positionnées dans le micro-code "
-"OpenFirmware Pegasos afin que votre système puisse démarrer automatiquement. "
-"À la fin de cette étape d'installation, le système redémarrera. À l'invite "
+"Certaines variables doivent Ãªtre positionnÃ©es dans le micro-code "
+"OpenFirmware Pegasos afin que votre systÃ¨me puisse dÃ©marrer automatiquement. "
+"Ã€ la fin de cette Ã©tape d'installation, le systÃ¨me redÃ©marrera. Ã€ l'invite "
 "de l'OpenFirmware Pegasos, positionnez les variables suivantes pour activer "
-"le démarrage automatique :"
+"le dÃ©marrage automatiqueÂ :"
 
 #. Type: note
 #. Description
@@ -69,7 +69,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Le noyau pourra également être démarré manuellement avec :"
+msgstr "Le noyau pourra Ã©galement Ãªtre dÃ©marrÃ© manuellement avecÂ :"
 
 #. Type: note
 #. Description
@@ -81,13 +81,13 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "à l'invite d'OpenFirmware."
+msgstr "Ã  l'invite d'OpenFirmware."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Réglage des variables du micro-code pour démarrer automatiquement"
+msgstr "RÃ©glage des variables du micro-code pour dÃ©marrer automatiquement"
 
 #. Type: note
 #. Description
@@ -99,13 +99,13 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Certaines variables doivent être positionnées dans le micro-code "
-"(« firmware ») NeTTrom du Netwinder afin que votre système puisse démarrer "
-"automatiquement. À la fin de cette étape d'installation, le système "
-"redémarrera et le code logiciel tentera un démarrage automatique. Ce "
-"démarrage peut être interrompu en appuyant une touche : cela vous amènera au "
-"processeur de commandes de NeTTrom où vous devrez exécuter les commandes "
-"suivantes :"
+"Certaines variables doivent Ãªtre positionnÃ©es dans le micro-code "
+"(Â«Â firmwareÂ Â») NeTTrom du Netwinder afin que votre systÃ¨me puisse dÃ©marrer "
+"automatiquement. Ã€ la fin de cette Ã©tape d'installation, le systÃ¨me "
+"redÃ©marrera et le code logiciel tentera un dÃ©marrage automatique. Ce "
+"dÃ©marrage peut Ãªtre interrompu en appuyant une toucheÂ : cela vous amÃ¨nera au "
+"processeur de commandes de NeTTrom oÃ¹ vous devrez exÃ©cuter les commandes "
+"suivantesÂ :"
 
 #. Type: note
 #. Description
@@ -132,15 +132,15 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Cette opération ne doit être effectuée qu'une seule fois. Après cela, "
-"utilisez la commande « boot » ou redémarrez le système pour continuer "
+"Cette opÃ©ration ne doit Ãªtre effectuÃ©e qu'une seule fois. AprÃ¨s cela, "
+"utilisez la commande Â«Â bootÂ Â» ou redÃ©marrez le systÃ¨me pour continuer "
 "l'installation."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Aucun programme de démarrage installé"
+msgstr "Aucun programme de dÃ©marrage installÃ©"
 
 #. Type: note
 #. Description
@@ -149,8 +149,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Aucun programme de démarrage n'a été installé, soit parce que vous avez "
-"volontairement choisi de ne pas le faire, soit parce qu'aucun ne gère "
+"Aucun programme de dÃ©marrage n'a Ã©tÃ© installÃ©, soit parce que vous avez "
+"volontairement choisi de ne pas le faire, soit parce qu'aucun ne gÃ¨re "
 "actuellement l'architecture que vous utilisez."
 
 #. Type: note
@@ -160,5 +160,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Vous devrez démarrer manuellement avec le noyau ${KERNEL} qui se trouve sur "
-"la partition ${BOOT} et ${ROOT} passé en argument à ce noyau."
+"Vous devrez dÃ©marrer manuellement avec le noyau ${KERNEL} qui se trouve sur "
+"la partition ${BOOT} et ${ROOT} passÃ© en argument Ã  ce noyau."
