--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -6,18 +6,18 @@
 # Polish messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Copyright (C) 2004-2005 Bartosz Feñski <fenio@debian.org>
+# Copyright (C) 2004-2005 Bartosz FeÅ„ski <fenio@debian.org>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-10-07 10:51+0200\n"
+"PO-Revision-Date: 2005-11-12 18:59+0100\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: text
@@ -37,10 +37,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"By móc uruchamiaæ nowy system automatycznie, nale¿y ustawiæ pewne zmienne w "
-"Pegasos OpenFirmware. Po zakoñczeniu instalacji, system zostanie ponownie "
-"uruchomiony. Przy znaku zachêty Pegasos OpenFirmware ustaw nastêpuj±ce "
-"zmienne OpenFirmware by uaktywniæ automatyczne uruchamianie:"
+"By mÃ³c uruchamiaÄ‡ nowy system automatycznie, naleÅ¼y ustawiÄ‡ pewne zmienne w "
+"Pegasos OpenFirmware. Po zakoÅ„czeniu instalacji, system zostanie ponownie "
+"uruchomiony. Przy znaku zachÄ™ty Pegasos OpenFirmware ustaw nastÄ™pujÄ…ce "
+"zmienne OpenFirmware by uaktywniÄ‡ automatyczne uruchamianie:"
 
 #. Type: note
 #. Description
@@ -61,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Alternatywnie mo¿esz uruchomiæ j±dro rêcznie wprowadzaj±c :"
+msgstr "Alternatywnie moÅ¼esz uruchomiÄ‡ jÄ…dro rÄ™cznie wprowadzajÄ…c :"
 
 #. Type: note
 #. Description
@@ -73,7 +73,7 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr "przy znaku zachêty OpenFirmware."
+msgstr "przy znaku zachÄ™ty OpenFirmware."
 
 #. Type: note
 #. Description
@@ -92,11 +92,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"By móc uruchamiaæ Debiana automatycznie, nale¿y ustawiæ pewne zmienne "
-"Netwinder NeTTrom firmware. Po zakoñczeniu instalacji, system zostanie "
-"ponownie uruchomiony i firmware spróbuje automatycznie siê za³adowaæ. Mo¿esz "
-"przerwaæ ten proces naciskaj±c jakikolwiek klawisz. Zostaniesz wtedy "
-"przeniesiony do systemu poleceñ NeTTrom, gdzie nale¿y wprowadziæ nastêpuj±ce "
+"By mÃ³c uruchamiaÄ‡ Debiana automatycznie, naleÅ¼y ustawiÄ‡ pewne zmienne "
+"Netwinder NeTTrom firmware. Po zakoÅ„czeniu instalacji, system zostanie "
+"ponownie uruchomiony i firmware sprÃ³buje automatycznie siÄ™ zaÅ‚adowaÄ‡. MoÅ¼esz "
+"przerwaÄ‡ ten proces naciskajÄ…c jakikolwiek klawisz. Zostaniesz wtedy "
+"przeniesiony do systemu poleceÅ„ NeTTrom, gdzie naleÅ¼y wprowadziÄ‡ nastÄ™pujÄ…ce "
 "polecenia:"
 
 #. Type: note
@@ -124,8 +124,8 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Bêdziesz musia³ zrobiæ to tylko raz. Pó¼niej wprowad¼ polecenie \"boot\" lub "
-"uruchom ponownie komputer by przej¶æ do nastêpnego etapu instalacji."
+"BÄ™dziesz musiaÅ‚ zrobiÄ‡ to tylko raz. PÃ³Åºniej wprowadÅº polecenie \"boot\" lub "
+"uruchom ponownie komputer by przejÅ›Ä‡ do nastÄ™pnego etapu instalacji."
 
 #. Type: note
 #. Description
@@ -140,8 +140,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Nie zainstalowano programu uruchomieniowego, albo poniewa¿ go nie wybrano "
-"albo poniewa¿ Twoja architektura jeszcze go nie obs³uguje."
+"Nie zainstalowano programu uruchomieniowego, albo poniewaÅ¼ go nie wybrano "
+"albo poniewaÅ¼ Twoja architektura jeszcze go nie obsÅ‚uguje."
 
 #. Type: note
 #. Description
@@ -150,5 +150,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Bêdziesz musia³ uruchamiaæ system rêcznie z u¿yciem j±dra ${KERNEL}, z "
-"partycji ${BOOT}, przekazuj±c ${ROOT} jako jego argument."
+"BÄ™dziesz musiaÅ‚ uruchamiaÄ‡ system rÄ™cznie z uÅ¼yciem jÄ…dra ${KERNEL}, z "
+"partycji ${BOOT}, przekazujÄ…c ${ROOT} jako jego argument."
