[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r32386

--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -5,17 +5,22 @@
 # 
 # translation of debian-installer_packages_po.po to Arabic
 # Arabic messages for debian-installer. Copyright (C) 2003 Software in the Public Interest, Inc. This file is distributed under the same license as debian-installer. Ossama M. Khayat <okhayat@yahoo.com>, 2005.
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer_packages_po\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-07 15:29+0300\n"
+"PO-Revision-Date: 2005-10-13 16:59+0300\n"
 "Last-Translator: Ossama M. Khayat <okhayat@yahoo.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"#-#-#-#-#  debian-installer_packages_po.po (debian-installer_packages_po)  #-"
+"#-#-#-#\n"
+"X-Generator: KBabel 1.10.2\n"
+"#-#-#-#-#  ar.po (debian-installer_packages_po)  #-#-#-#-#\n"
 "X-Generator: KBabel 1.10.2\n"
 
 #. Type: text
@@ -28,7 +33,6 @@ msgstr "المتابعة دون محمّل إقلاع"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -36,8 +40,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "يجب تعيين بعض المتغيرات في Pegasos OpenFirmware كي يتمكن نظامك من الإقلاع "
-"آليا. عند نهاية التثبيت، سيتم إعادة إقلاع النظام. يجب تعيين متغيرات  "
-"OpenFirmware عند ملقن Pegasos OpenFirmware لتمكين الإقلاع الآلي:"
+"آليا. عند نهاية التثبيت، سيتم إعادة تشغيل النظام. عند ملقن Pegasos "
+"OpenFirmware قم بتعيين متغيّرات OpenFirmware التالية لتمكين الإقلاع الآلي "
+"auto-booting:"
 
 #. Type: note
 #. Description
@@ -75,13 +80,18 @@ msgstr "عند ملقّن OpenFirmware."
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
+#, fuzzy
 msgid "Setting firmware variables for automatic boot"
-msgstr "تعيين متغيّرات البرمجيّات الضّمنيّة للإقلاع التّلقائي"
+msgstr ""
+"#-#-#-#-#  debian-installer_packages_po.po (debian-installer_packages_po)  #-"
+"#-#-#-#\n"
+"تعيين متغيّرات البرمجيّات الضمنيّة للإقلاع التلقائي\n"
+"#-#-#-#-#  ar.po (debian-installer_packages_po)  #-#-#-#-#\n"
+"تعيين متغيّرات البرمجيّات الضّمنيّة للإقلاع التّلقائي"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -89,10 +99,10 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"يجب تعيين بعض المتغيّرات في برامج NeTTrom الضّمنيّة حتّى يتمكّن نظامك من إقلاع "
-"ديبيان تلقائيّاً. عند نهاية مرحلة التثبيت سيعيد النظام الإقلاع و ستجرّب البرامج "
-"الضّمنيّة الإقلاع تلقائيّاً. يمكنك إجهاض هذا بالضّغط على أي مفتاح. عندها ستُسقط في "
-"نظام أوامر NeTTrom حيث سيتعيّن عليك إدخال الأوامر التّالية:"
+"يجب تعيين بعض المتغيّرات في برمجيات Netwinder NeTTrom الضمنيّة كي يتمكّن نظامك "
+"من إقلاع لينكس تلقائيّاً. عند نهاية مرحلة التثبيت هذه، يتم إعادة تشغيل النظام "
+"وستجرّب البرمجيات الضمنيّة الإقلاع تلقائيّاً. يمكنك إيقاف هذه العملية بالضغط على "
+"أي مفاتح. سيتم وضعك في نظام أوامر NeTTrom حيث يجب عليك تنفيذ الأوامر التالية:"
 
 #. Type: note
 #. Description
@@ -115,13 +125,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"ستحتاج للقيام بهذا مرّةً واحدة فقط. بعد ذلك، أدخل الأمر \"boot\" أو قم بإعادة "
-"تشغيل النظام كي تتقدّم نحو مرحلة التثبيت الثّانية لديبيان."
+"ستحتاج للقيام بهذا مرة واحدة فقط. بعد ذلك، أدخل الأمر \"boot\" أو قم بإعادة "
+"تشغيل النظام كي تتقدّم نحو مرحلة التثبيت التالية."
 
 #. Type: note
 #. Description
@@ -142,10 +151,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "ستضطر إلى الإقلاع يدويّاً بنواة ${KERNEL} على الجزء ${BOOT} و بتمرير ${ROOT} "
-"كمعطىً للنّواة."
+"كمعطى للنواة."
