[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r32485

--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -17,7 +17,7 @@ msgstr ""
 "Project-Id-Version: ru\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-10 09:55+0400\n"
+"PO-Revision-Date: 2005-11-27 08:30+0300\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -155,5 +155,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Вам придется загружать ядро ${KERNEL} вручную с раздела ${BOOT} и передать "
+"Вам придётся загружать ядро ${KERNEL} вручную с раздела ${BOOT} и передать "
 "ему в качестве аргумента ${ROOT}."
