[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r32529

--- a/debian/po/ar.po
+++ b/debian/po/ar.po
@@ -75,9 +75,8 @@ msgstr "عند ملقّن OpenFirmware."
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid "Setting firmware variables for automatic boot"
-msgstr "تعيين متغيّرات البرمجيّات الضّمنيّة للإقلاع التّلقائي"
+msgstr "تعيين متغيّرات البرمجيّات الضمنيّة للإقلاع التلقائي"
 
 #. Type: note
 #. Description
