--- a/debian/po/lv.po
+++ b/debian/po/lv.po
@@ -3,30 +3,31 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of lv.po to Latvian
 # Latvian messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-#
-#
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-05 22:05+0300\n"
-"Last-Translator: Aigars Mahinovs <aigarius@debian.org>\n"
-"Language-Team: Latvian <locale@laka.lv>\n"
+"PO-Revision-Date: 2005-12-02 01:32+0200\n"
+"Last-Translator: Aigars Mahinovs <aigarius@laka.lv>\n"
+"Language-Team: locale@laka.lv <locale@laka.lv>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.10\n"
+"X-Poedit-Language: Latvian\n"
+"X-Poedit-Country: LATVIA\n"
 
 #. Type: text
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Turpināt bez sakņošanas lādētāja"
+msgstr "Turpināt bez sāknētāja"
 
 #. Type: note
 #. Description
@@ -37,6 +38,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
+"Pegasos OpenFirmware ir jāuzstāda daži mainīgie, lai jūsu linux sistēma "
+"varētu automātiski ielādēties. Instalācijas beigās sistēma pārsāknēsies. "
+"Pegasos OpenFirmware uzstādījumu izvēles logā uzstādiet sekojošus "
+"OpenFirmware mainīgos, lai aktivizētu sistēmas automātisko ielādi."
 
 #. Type: note
 #. Description
@@ -47,6 +52,10 @@ msgid ""
 " setenv auto-boot-timeout 5000\n"
 " setenv auto-boot? true"
 msgstr ""
+" setenv boot-device ${OF_BOOT_DEVICE}\n"
+" setenv boot-file ${OF_BOOT_FILE}\n"
+" setenv auto-boot-timeout 5000\n"
+" setenv auto-boot? true"
 
 #. Type: note
 #. Description
@@ -54,24 +63,26 @@ msgstr ""
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
 msgstr ""
+"Pretējā gadījumā sistēmas kodolu jūs varēsies sāknēt manuāli ievadot "
+"sekojošu komandu:"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid " ${KERNEL_BOOT}"
-msgstr ""
+msgstr " ${KERNEL_BOOT}"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "OpenFirmware iestatījumu logā."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr ""
+msgstr "Firmware mainīgo uzstādīšana automātiskai sāknēšanai"
 
 #. Type: note
 #. Description
@@ -83,6 +94,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
+"Netwinder NeTTrom firmwarei ir jāuzstāda daži mainīgie, lai jūsu linux "
+"sistēma automātiski ielādētos. Instalācijas beigās sistēma pārsāknēsies un "
+"programmaparatūra mēģinās automātiksi ielādēt jauno sistēmu. Jūs varat "
+"atcelt to nospiežot jebkuru taustiņu. Pēc tam jūs nonāksiet NeTTrom "
+"komandrindas sistēmā, kur jums vajadzēs izpildīt sekojošas komandas:"
 
 #. Type: note
 #. Description
@@ -95,6 +111,12 @@ msgid ""
 "   setenv cmdappend ${CMDAPPEND}\n"
 "   save-all"
 msgstr ""
+"   setenv kernconfig fs\n"
+"   setenv kerndev ${KERNDEV}\n"
+"   setenv kernfile ${KERNFILE}\n"
+"   setenv rootdev ${ROOTDEV}\n"
+"   setenv cmdappend ${CMDAPPEND}\n"
+"   save-all"
 
 #. Type: note
 #. Description
@@ -103,12 +125,15 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
+"To jums vajadzēs izdarīt tikai vienu reizi, vēlāk varēsiet vienkārši ievadīt "
+"\"boot\" komandu vai pārsāknēt datoru, lai pārietu uz nākamo instalācijas "
+"soli."
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Iekārta saknēšanas lādētājs nav izvēlēts"
+msgstr "Sāknētājs nav uzinstaēts"
 
 #. Type: note
 #. Description
@@ -117,6 +142,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
+"Sāknētājs nav uzinstalēts. Tas ir noticis tāpēc, ka jūs esat izvēlējies to "
+"neinstalet vai arī jūsu datora arhitektūra pagaidām neatbalstasāknētāju."
 
 #. Type: note
 #. Description
@@ -125,3 +152,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
+"Jums vajadzēs sāknēt datoru manuāli ar ${KERNEL} kodolu uz ${BOOT} "
+"partīcijas un norādot šādu kodola parametru: ${ROOT}"
