[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r32660

--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -41,7 +41,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Kelkaj variabloj en la firmvaro 'Pegasos OpenFirmware' bezonas agordaĵon por "
-"aŭtomate praŝargi linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
+"aŭtomate praŝargi Linukson. La sistemo reŝargiĝos post la instalado. Akomodu "
 "la sekvantaj variabloj dum la 'Pegasos OpenFirmware' invito por aktivigi la "
 "aŭtomatan praŝargon."
 
@@ -95,7 +95,7 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Kelkaj variabloj en la firmvaro 'Netwinder NeTTrom' bezonas agordaĵon por "
-"aŭtomate praŝargi linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
+"aŭtomate praŝargi Linukson. La sistemo reŝargiĝos post ĉi tiu instalada fazo "
 "kaj la firmvaro strebos de ekfunkcii aŭtomate. Tiu ekfunkcio eble ĉesigu per "
 "tajpi ajnan klavon. Tiuokaze, vi alkondukos inviton de 'NeTTrom' kie vi "
 "plenumendos la sekvantajn ordonojn :"
