[l10n] [SILENT_COMMIT] Run debconf-updatepo on all packages
r32865

--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -18,7 +18,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-10-07 21:04+0300\n"
+"PO-Revision-Date: 2005-12-09 07:21+0200\n"
 "Last-Translator: Recai Oktaş <roktas@omu.edu.tr>\n"
 "Language-Team: Debian L10n Turkish <debian-l10n-turkish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,8 +43,8 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Sisteminizin otomatik olarak açılması için Pegasos OpenFirmware "
-"yerleşilindeki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
+"Sisteminizin otomatik olarak açılması için Pegasos OpenFirmware aygıt "
+"yazılımındaki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
 "aşamasının sonunda sistem tekrar başlatılacak.  Otomatik önyüklemeyi "
 "etkinleştirmek için Pegasos OpenFirmware komut isteminde aşağıdaki "
 "OpenFirmware değişkenlerini ayarlayın:"
@@ -87,7 +87,7 @@ msgstr "(OpenFirmware komut isteminde)"
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Otomatik önyükleme için yerleşil değişkenleri ayarlanıyor"
+msgstr "Otomatik önyükleme için aygıt yazılımındaki değişkenler ayarlanıyor"
 
 #. Type: note
 #. Description
@@ -99,12 +99,12 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Sisteminizin otomatik olarak açılması için Netwinder NeTTrom yerleşilindeki "
-"bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum aşamasının sonunda "
-"sistem tekrar başlatılacak ve yerleşil otomatik önyükleme girişiminde "
-"bulunacaktır.  Herhangi bir tuşa basarak bu işlemi sonlandırabilirsiniz.  "
-"Daha sonra aşağıdaki komutları çalıştırmanızın gerekeceği NeTTrom komut "
-"sistemine gireceksiniz:"
+"Sisteminizin otomatik olarak açılması için Netwinder NeTTrom aygıt "
+"yazılımındaki bazı değişkenlerin ayarlanması gerekiyor.  Bu kurulum "
+"aşamasının sonunda sistem tekrar başlatılacak ve aygıt yazılımı otomatik "
+"önyükleme girişiminde bulunacaktır.  Herhangi bir tuşa basarak bu işlemi "
+"sonlandırabilirsiniz.  Daha sonra aşağıdaki komutları çalıştırmanızın "
+"gerekeceği NeTTrom komut sistemine gireceksiniz:"
 
 #. Type: note
 #. Description
