--- a/debian/po/gl.po
+++ b/debian/po/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-16 14:34+0200\n"
+"PO-Revision-Date: 2005-12-11 16:22+0100\n"
 "Last-Translator: Jacobo Tarrio <jtarrio@debian.org>\n"
 "Language-Team: Galego <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -79,7 +79,7 @@ msgstr "no indicativo de OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Configurando as variables do firmware para o inicio automático"
+msgstr "A configurar as variables do firmware para o inicio automático"
 
 #. Type: note
 #. Description
