--- a/debian/po/pl.po
+++ b/debian/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-11-12 18:59+0100\n"
+"PO-Revision-Date: 2005-12-13 12:30+0100\n"
 "Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,6 @@ msgstr "Kontynuuj bez programu uruchomieniowego"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -84,7 +83,6 @@ msgstr "Ustawianie zmienny firmware do automatycznego uruchamiania"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -92,7 +90,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"By móc uruchamiać Debiana automatycznie, należy ustawić pewne zmienne "
+"By móc uruchamiać nowy system automatycznie, należy ustawić pewne zmienne "
 "Netwinder NeTTrom firmware. Po zakończeniu instalacji, system zostanie "
 "ponownie uruchomiony i firmware spróbuje automatycznie się załadować. Możesz "
 "przerwać ten proces naciskając jakikolwiek klawisz. Zostaniesz wtedy "
