--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -151,5 +151,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Vi bezonos mane proŝargi kun la ${KERNEL} kerno el ${BOOT} subdisko kaj doni "
-"${ROOT} kiel argumento al ĉi kerno."
+"Vi bezonos mane proŝargi kun la ${KERNEL} kerno el ${BOOT} diskpartigo kaj "
+"doni ${ROOT} kiel argumento al ĉi kerno."
