[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r33134

--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-07-08 00:05+0700\n"
-"Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
+"PO-Revision-Date: 2005-12-21 17:15+0700\n"
+"Last-Translator: Parlin Imanuel Toh <pt@samip-online.com>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
 "id>\n"
 "MIME-Version: 1.0\n"
@@ -38,7 +38,6 @@ msgstr "Teruskan tanpa boot loader"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -88,12 +87,11 @@ msgstr "pada prompt OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Menyetel variabel firmware untuk boot otomatis"
+msgstr "Menata variabel firmware untuk boot otomatis"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -102,10 +100,11 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Beberapa variabel perlu diatur dalam firmware Netwinder NeTTrom agar sistem "
-"Anda dapat booting Debian secara otomatis. Pada akhir instalasi, sistem akan "
-"booting ulang, dan firmware akan berusaha untuk booting otomatis. Anda dapat "
-"membatalkannya dengan menekan sembarang tombol. Anda kemudian akan masuk ke "
-"sistem perintah NeTTrom, tempat Anda harus menjalankan perintah berikut ini:"
+"Anda dapat booting Debian secara otomatis. Pada akhir tahap instalasi ini, "
+"sistem akan booting ulang, dan firmware akan berusaha untuk booting "
+"otomatis. Anda dapat membatalkannya dengan menekan sembarang tombol. Anda "
+"kemudian akan masuk ke sistem perintah NeTTrom, tempat Anda harus "
+"menjalankan perintah berikut ini:"
 
 #. Type: note
 #. Description
