--- a/debian/po/el.po
+++ b/debian/po/el.po
@@ -11,15 +11,15 @@
 # Emmanuel Galatoulas <galas@tee.gr>, 2004.
 # Konstantinos Margaritis <markos@debian.org>, 2004.
 # Greek Translation Team <debian-l10n-greek@lists.debian.org>, 2004, 2005.
+# quad-nrg.net <galaxico@quad-nrg.net>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-15 21:29EEST\n"
-"Last-Translator: Greek Translation Team <debian-l10n-greek@lists.debian."
-"org>\n"
+"PO-Revision-Date: 2005-12-27 03:08+0200\n"
+"Last-Translator: quad-nrg.net <galaxico@quad-nrg.net>\n"
 "Language-Team: Greek <debian-l10n-greek@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,8 +29,8 @@ msgstr ""
 "org>\n"
 "org>\n"
 "org>\n"
-"X-Generator: KBabel 1.9.1\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: KBabel 1.10.2\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
 #. Description
@@ -169,5 +169,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Θα πρέπει να κάνετε χειροκίνητη εκκίνηση με τον πυρήνα  ${KERNEL} στο τμήμα "
-"${BOOT} και το ${ROOT} ως όρισμα εκκίνησης πυρήνα."
+"Θα πρέπει να κάνετε χειροκίνητη εκκίνηση με τον πυρήνα  ${KERNEL} στο "
+"κατάτμηση ${BOOT} και το ${ROOT} ως όρισμα εκκίνησης πυρήνα."
