[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r33399

--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-10-28 14:37+0200\n"
+"PO-Revision-Date: 2005-12-28 19:18+0200\n"
 "Last-Translator: Tapio Lehtonen <tale@debian.org>\n"
 "Language-Team: Finnish <debian-l10n-finnish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,7 +33,6 @@ msgstr "Jatketaan ilman alkulatausohjelmaa"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -41,7 +40,7 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Joidenkin muuttujien arvot Pegasos OpenFirmwaressa on asetettava, jotta "
-"järjestelmä käynnistäisi Debianin automaattisesti. Järjestelmä käynnistyy "
+"järjestelmä käynnistäisi linuxin automaattisesti. Järjestelmä käynnistyy "
 "uudelleen asennuksen lopuksi. Aseta seuraavat muuttujat Pegasos "
 "OpenFirmwaren kehoitteessa, jotta automaattikäynnistys toimii:"
 
@@ -87,7 +86,6 @@ msgstr "Asetetaan laiteohjelmiston muuttujat automaattikäynnistystä varten"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -96,10 +94,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Joidenkin muuttujien arvot Netwinderin laiteohjelmistossa NeTTrom on "
-"asetettava, jotta järjestelmä käynnistäisi Debianin automaattisesti. Tämän "
+"asetettava, jotta järjestelmä käynnistäisi linuxin automaattisesti. Tämän "
 "asennusvaiheen lopussa järjestelmä käynnistyy uudelleen ja laiteohjelmisto "
 "yrittää automaattista käynnistystä. Tämän voi keskeyttää millä tahansa "
-"näppäimellä, jolloin NeTTrom:n komentorivillä voidaan antaa seuraavat "
+"näppäimellä, jolloin NeTTrom:n komentorivillä on annettava seuraavat "
 "komennot:"
 
 #. Type: note
@@ -123,14 +121,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Tämä on tehtävä vain yhden kerran. Käytä sitten komentoa \"boot\"tai "
-"käynnistä järjestelmä uudelleen edetäksesi seuraavaan Debianin asennuksen "
-"vaiheeseen."
+"käynnistä järjestelmä uudelleen edetäksesi seuraavaan asennuksen vaiheeseen."
 
 #. Type: note
 #. Description
@@ -152,10 +148,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Ydin ${KERNEL} on käynnistettävä itse levyosiolta ${BOOT} ja välitettävä "
-"${ROOT} parametrina."
+"${ROOT} ytimelle parametrina."
