--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -17,7 +17,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: fr2\n"
+"Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2005-11-18 07:40+0100\n"
