--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -10,19 +10,20 @@
 # Vũ Quang Trung <vu.quang.trung@auf.org>
 # Trịnh Minh Thành <tmthanh@yahoo.com>
 # Clytie Siddall <clytie@riverland.net.au>, 2005.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-08-21 14:21+0930\n"
+"PO-Revision-Date: 2005-12-30 22:22+1030\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
-"Language-Team: Vietnamese <debian-l10n-vietnamese@lists.debian.org>\n"
+"Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
+"X-Generator: LocFactoryEditor 1.5.1b\n"
 
 # Type: text
 # Description
@@ -43,10 +44,10 @@ msgid ""
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"Cần phải lập một số biến trong Pegasos OpenFirmware để mà hệ thống bạn tự "
-"động khởi động Linux. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
-"Khi xem dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware "
-"theo đây để hiệu lực tự động khởi động:"
+"Một số biến cần phải được lập trong Pegasos OpenFirmware để mà hệ thống bạn "
+"tự động khởi động Linux. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
+"Khi dấu nhắc Pegasos OpenFirmware xuất hiện, bạn hãy lập những biến "
+"OpenFirmware theo đây để hiệu lực khả năng tự động khởi động:"
 
 # Variable: do not translate/ biến: đừng dịch
 #. Type: note
@@ -91,7 +92,7 @@ msgstr "tại dấu nhắc OpenFirmware."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Đang lập những biến phần vững (firmware) để tự động khởi động"
+msgstr "Đang lập các biến phần vững (firmware) để tự động khởi động"
 
 #. Type: note
 #. Description
@@ -103,11 +104,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Cần phải lập một số biến trong phần vững Netwinder NeTTrom để mà hệ thống "
-"bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt thì hệ thống "
-"sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Có thể hủy bỏ hành "
-"động này bằng cách bấm bất cứ phím nào. Vậy sẽ thả bạn vào hệ thống lệnh "
-"NeTTrom nơi mà hãy thực hiện những lệnh theo đây:"
+"Một số biến cần phải được lập trong phần vững Netwinder NeTTrom để mà hệ "
+"thống bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt này thì "
+"hệ thống sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Bạn có thể "
+"hủy bỏ hành động này bằng cách bấm bất cứ phím nào. Vậy bạn sẽ được thả vào "
+"hệ thống lệnh NeTTrom nơi cần thực hiện những lệnh theo đây:"
 
 # Literal: do not translate/ nghĩa chữ: đừng dịch
 #. Type: note
@@ -135,9 +136,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Bạn sẽ chỉ cần phải làm như thế một lần. Sau đó thì hãy nhập lệnh « boot "
-"» (khởi động) hay khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
-"kế."
+"Bạn sẽ chỉ cần phải làm như thế một lần thôi. Sau đó thì hãy nhập lệnh « "
+"boot » (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến giai đoạn cài "
+"đặt kế."
 
 # Type: note
 # Description
@@ -166,5 +167,5 @@ msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Sẽ cần phải tự khởi động với hạt nhân ${KERNEL} trên vùng ${BOOT} và gởi "
-"${ROOT} như là đối số hạt nhân."
+"Bạn sẽ cần phải tự khởi động với hạt nhân ${KERNEL} trên phân vùng ${BOOT} "
+"và gởi ${ROOT} dạng đối số hạt nhân."
