[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r33831

--- a/debian/po/zh_TW.po
+++ b/debian/po/zh_TW.po
@@ -30,16 +30,15 @@ msgstr "不安裝開機程式，繼續進行"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"為了讓系統能自動開機，您必須在 Pegasos OpenFirmware 中設定一些參數。在安裝結"
-"束之時，系統將會重新開機。在 Pegasos OpenFirmware 的提示文字上，設定以下的 "
-"OpenFirmware 參數來啟用自動開機："
+"為了讓系統能以 Linux 自動開機，您必須在 Pegasos OpenFirmware 中設定一些參數。"
+"在安裝結束之時，系統將會重新開機。在 Pegasos OpenFirmware 的提示文字上，設定"
+"以下的 OpenFirmware 參數來啟用自動開機："
 
 #. Type: note
 #. Description
@@ -83,7 +82,6 @@ msgstr "替自動開機設定韌體參數"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -91,7 +89,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"為了讓系統能自動由 Debian 開機，您必須在 Netwinder NeTTrom  韌體中設定一些參"
+"為了讓系統能自動由 Linux 開機，您必須在 Netwinder NeTTrom  韌體中設定一些參"
 "數。在這個安裝階段結束之時，系統將會重新開機，而韌體將會試圖進行自動開機；您"
 "可以按下任何按鍵來中斷這個程序。之後，您將會進入 NeTTrom 的命令系統，您必須在"
 "此執行以下命令："
@@ -117,13 +115,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"這些動作只需進行一次。之後，輸入 \"boot\" 指令或重新啟動系統來繼續進行 "
-"Debian 的下一個安裝階段。"
+"這些動作只需進行一次。之後，輸入 \"boot\" 指令或重新啟動系統來繼續進行 下一個"
+"安裝階段。"
 
 #. Type: note
 #. Description
@@ -144,7 +141,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
