--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-09-20 13:08+0200\n"
+"PO-Revision-Date: 2006-01-14 17:53+0100\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Pokračovať bez zavádzača"
+msgstr "Pokračovanie bez zavádzača"
 
 #. Type: note
 #. Description
