[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r34183

--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-12-30 22:22+1030\n"
+"PO-Revision-Date: 2006-01-18 22:53+1030\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -33,7 +33,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Tiếp tục mà không có bộ tải khởi động"
+msgstr "Tiếp tục lại mà không có bộ tải khởi động"
 
 #. Type: note
 #. Description
@@ -45,9 +45,9 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Một số biến cần phải được lập trong Pegasos OpenFirmware để mà hệ thống bạn "
-"tự động khởi động Linux. Tại kết thúc cài đặt thì hệ thống sẽ khởi động lại. "
-"Khi dấu nhắc Pegasos OpenFirmware xuất hiện, bạn hãy lập những biến "
-"OpenFirmware theo đây để hiệu lực khả năng tự động khởi động:"
+"tự động khởi động Linux. Tại kết thúc cài đặt, hệ thống sẽ khởi động lại. "
+"Tại dấu nhắc Pegasos OpenFirmware, bạn hãy lập những biến OpenFirmware theo "
+"đây để bật khả năng tự động khởi động:"
 
 # Variable: do not translate/ biến: đừng dịch
 #. Type: note
@@ -105,10 +105,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Một số biến cần phải được lập trong phần vững Netwinder NeTTrom để mà hệ "
-"thống bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt này thì "
-"hệ thống sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Bạn có thể "
-"hủy bỏ hành động này bằng cách bấm bất cứ phím nào. Vậy bạn sẽ được thả vào "
-"hệ thống lệnh NeTTrom nơi cần thực hiện những lệnh theo đây:"
+"thống bạn sẽ tự động khởi động Linux. Tại kết thúc giai đoạn cài đặt này, hệ "
+"thống sẽ khởi động lại, và phần vững sẽ cố tự động khởi động. Bạn có thể hủy "
+"bỏ hành động này bằng cách bấm bất cứ phím nào. Vậy bạn sẽ được thả vào hệ "
+"thống lệnh NeTTrom nơi cần thực hiện những lệnh theo đây:"
 
 # Literal: do not translate/ nghĩa chữ: đừng dịch
 #. Type: note
@@ -136,9 +136,9 @@ msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Bạn sẽ chỉ cần phải làm như thế một lần thôi. Sau đó thì hãy nhập lệnh « "
-"boot » (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến giai đoạn cài "
-"đặt kế."
+"Bạn sẽ cần phải làm như thế chỉ một lần thôi. Sau đó, hãy nhập lệnh « boot "
+"» (khởi động) hoặc khởi động lại hệ thống để tiếp tục đến giai đoạn cài đặt "
+"sau."
 
 # Type: note
 # Description
@@ -146,7 +146,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Chưa cài đặt bộ tải khởi động nào."
+msgstr "Chưa cài đặt bộ tải khởi động"
 
 # Type: note
 # Description
@@ -157,8 +157,8 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Chưa cài đặt bộ tải khởi động, hoặc vì bạn chọn hoặc vì kiến trúc dứt khoát "
-"này chưa hỗ trợ bộ tải khởi động."
+"Chưa cài đặt bộ tải khởi động nào, hoặc vì bạn chọn như thế hoặc vì kiến "
+"trúc dứt khoát này chưa hỗ trợ bộ tải khởi động."
 
 #. Type: note
 #. Description
@@ -168,4 +168,4 @@ msgid ""
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
 "Bạn sẽ cần phải tự khởi động với hạt nhân ${KERNEL} trên phân vùng ${BOOT} "
-"và gởi ${ROOT} dạng đối số hạt nhân."
+"và gởi ${ROOT} qua dạng đối số hạt nhân."
