--- a/debian/po/mg.po
+++ b/debian/po/mg.po
@@ -7,22 +7,23 @@
 # Malagasy messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interst, Inc.
 # This file is distributed under the same licence as debian-installer.
+#
 # Jaonary Rabarisoa  <jaonary@ifrance.com>, 2004.
 # Jaonary Rabarisoa <mpandikateny@linuxmg.org>, 2005.
-# Jaonary Rabarisoa <jaonary@free.fr>, 2005.
-#
+# Jaonary Rabarisoa <jaonary@free.fr>, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: mg\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-12-05 22:47+0100\n"
+"PO-Revision-Date: 2006-01-20 10:37+0100\n"
 "Last-Translator: Jaonary Rabarisoa <jaonary@free.fr>\n"
 "Language-Team: Malagasy <jaonary@free.fr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n>1;X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.1\n"
 
 #. Type: text
 #. Description
@@ -72,7 +73,7 @@ msgstr " ${KERNEL_BOOT}"
 #. Description
 #: ../nobootloader.templates:8
 msgid "at the OpenFirmware prompt."
-msgstr ""
+msgstr "eo amin'ny fandraisana OpenFirmware."
 
 #. Type: note
 #. Description
