--- a/debian/po/sq.po
+++ b/debian/po/sq.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-06-23 19:48+0200\n"
-"Last-Translator:  Elian Myftiu <elian@alblinux.net>\n"
+"PO-Revision-Date: 2006-01-20 13:42+0100\n"
+"Last-Translator:  Elian Myftiu <elian.myftiu@gmail.com>\n"
 "Language-Team: Debian L10n Albanian <debian-l10n-albanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +31,6 @@ msgstr "Vazhdo pa ngarkues nisjeje"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -39,8 +38,8 @@ msgid ""
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
 "Disa të ndryshueshme nevojitet të caktohen në Pegasos OpenFirmware në mënyrë "
-"që sistemi tënd të nisë automatikisht.  Në fund të instalimit, sistemi do të "
-"riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
+"që sistemi tënd të nisë linux automatikisht.  Në fund të instalimit, sistemi "
+"do të riniset.  Në rreshtin e komandës Pegasos OpenFirmware, cakto të "
 "ndryshueshmet e mëposhtme OpenFirmware për të aktivizuar nisjen automatike:"
 
 #. Type: note
@@ -85,7 +84,6 @@ msgstr "Duke caktuar të ndryshueshmet firmware për nisjen automatike"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -93,8 +91,8 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Disa të ndryshueshme kanë nevojë të caktohen në Netwinder NetTrom firmware "
-"në mënyrë që sistemi tënd të nisë Debian automatikisht.  Në fund të këtij "
+"Disa të ndryshueshme kanë nevojë të caktohen në Netwinder NeTTrom firmware "
+"në mënyrë që sistemi tënd të nisë linux automatikisht.  Në fund të këtij "
 "hapi instalimi, sistemi do të riniset, dhe firmware do mundohet të niset "
 "automatikisht.  Mund ta ndalosh këtë duke shtypur një tast çfarëdo. Më pas "
 "do kalosh në sistemin e komandave NeTTrom ku duhet të ekzekutosh komandat e "
@@ -121,13 +119,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "Këtë duhet ta bësh vetëm një herë.  Më pas, shkruaj komandën \"boot\" ose "
-"rinis sistemin për të vazhduar me fazën tjetër të instalimit të Debian-it."
+"rinis sistemin për të vazhduar me fazën tjetër të instalimit."
 
 #. Type: note
 #. Description
@@ -148,10 +145,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"Do duhet ta nisësh manualisht me kernelin ${KERNEL} në ndarjen ${BOOT} dhe "
-"duke kaluar ${ROOT} si argument të kernelit."
+"Do të duhet ta nisësh manualisht me kernelin ${KERNEL} në ndarjen ${BOOT} "
+"dhe duke kaluar ${ROOT} si argument të kernelit."
