--- a/debian/po/sl.po
+++ b/debian/po/sl.po
@@ -22,7 +22,7 @@ msgstr ""
 "Project-Id-Version: sl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-01-23 23:41+0100\n"
+"PO-Revision-Date: 2006-01-24 13:54+0100\n"
 "Last-Translator: Jure Cuhalev <gandalf@owca.info>\n"
 "Language-Team: Slovenian <lugos-slo@lugos.si>\n"
 "MIME-Version: 1.0\n"
@@ -37,14 +37,12 @@ msgstr ""
 #. Description
 #. Main menu item
 #: ../nobootloader.templates:4
-#, fuzzy
 msgid "Continue without boot loader"
-msgstr "Nadaljujem brez privzete smeri?"
+msgstr "Nadaljuj brez zagonskega nalagalnika"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
@@ -93,12 +91,11 @@ msgstr "na OpenFirmware pozivniku."
 #. Description
 #: ../nobootloader.templates:30
 msgid "Setting firmware variables for automatic boot"
-msgstr "Nastavljanje strojnoprogramskih spremenljivk za samodejni zagon"
+msgstr "Nastavljanje firmware spremenljivk za samodejni zagon"
 
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -107,10 +104,10 @@ msgid ""
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
 "Če želite samodejno zagnati Debian, je potrebno nastaviti nekaj spremenljivk "
-"v strojnoprogramski opremi Netwinder NeTTrom.  Na koncu namestitve se bo "
-"sistem ponovno zagnal in poskusil s samozagonom.  Prekličete ga lahko s "
-"poljubno tipko.  Pristali boste v ukaznem sistemu NeTTrom, kjer morate "
-"izvesti naslednje ukaze:"
+"v firmware opremi Netwinder NeTTrom.  Na koncu namestitve se bo sistem "
+"ponovno zagnal in poskusil s samozagonom.  Prekličete ga lahko s poljubno "
+"tipko.  Pristali boste v ukaznem sistemu NeTTrom, kjer morate izvesti "
+"naslednje ukaze:"
 
 #. Type: note
 #. Description
@@ -133,14 +130,13 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
 "To boste morali storiti samo enkrat. Kasneje, vnesite \"boot\" ukaz ali "
-"ponovno zaženite računalnik za nadaljevanje z naslednjim namesitvenim "
-"korakom Debiana."
+"ponovno zaženite računalnik za nadaljevanje z naslednjim namestitvenim "
+"korakom."
 
 #. Type: note
 #. Description
@@ -161,7 +157,6 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
