--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
 "PO-Revision-Date: 2004-11-09 23:24+0100\n"
-"Last-Translator: VEROK Istvan <vi@fsf.hu>\n"
+"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
