[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r34785

--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -6,19 +6,20 @@
 # Hungarian messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
+# Maintains: VI fsfhu
+# comm2: sas 321hu
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2004-11-09 23:24+0100\n"
+"PO-Revision-Date: 2006-02-07 17:03+0100\n"
 "Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: nplurals=2; plural=n>1;\n"
 
 #. Type: text
@@ -31,17 +32,15 @@ msgstr "Rendszerbetöltő nélküli továbblépés"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:8
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Pegasos OpenFirmware in order for your "
 "system to boot linux automatically.  At the end of the installation, the "
 "system will reboot.  At the Pegasos OpenFirmware prompt, set the following "
 "OpenFirmware variables to enable auto-booting:"
 msgstr ""
-"A Debian automatikus indításához a Pegasos OpenFirmware-ben néhány változót "
-"kell beállítani. A telepítés végén a rendszer újra fog indulni. Az "
-"automatikus indítást az Pegasos OpenFirmware-parancssorban a következők "
-"megadásával érheti el:"
+"A Debian automatikus indításához a Pegasos OpenFirmware egyes változóit kell "
+"beállítani. A telepítés végén a rendszer újraindul. Az automatikus "
+"indításhoz a Pegasos OpenFirmware parancssorban az alábbiakat kell megadni:"
 
 #. Type: note
 #. Description
@@ -85,7 +84,6 @@ msgstr "Firmware-változók automatikus indításra beállítása"
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "Some variables need to be set in the Netwinder NeTTrom firmware in order for "
 "your system to boot linux automatically.  At the end of this installation "
@@ -93,11 +91,11 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"A Debian automatikus indításához a Netwinder NeTTrom firmware-ben be kell "
-"állítani egyes változókat. A telepítés jelen szakaszának végén a rendszer "
-"újra fog indulni, a firmware pedig megkísérli az automatikus indulást. Ezt "
-"bármely billentyű lenyomásával meggátolhatja. Ekkor a NeTTrom "
-"parancsrendszer jön elő, itt adja ki a következő utasításokat:"
+"A Debian automatikus indításához a Netwinder NeTTrom firmware egyes "
+"változóit be kell állítani. E telepítő szakasz végén a rendszer újraindul és "
+"a firmware megkísérli az automatikus indulást. Ez bármely billentyű "
+"leütésével leállítható. Ekkor a NeTTrom parancsrendszer jön elő, itt a "
+"következő utasításokat kell kiadni:"
 
 #. Type: note
 #. Description
@@ -120,13 +118,12 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:30
-#, fuzzy
 msgid ""
 "You will only need to do this once.  Afterwards, enter the \"boot\" command "
 "or reboot the system to proceed to the next installation stage."
 msgstr ""
-"Ezt csak egyszer kell elvégezni. Utána a \"boot\" paranccsal vagy a rendszer "
-"újraindításával léphet a Debian-telepítés következő szakaszába."
+"Ezt csak egyszer kell megtenni. Ezután a \"a boot\" parancs vagy az "
+"újraindítás a telepítő következő lépésére lép."
 
 #. Type: note
 #. Description
