--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2005-12-30 14:56+0100\n"
+"PO-Revision-Date: 2006-02-16 00:55+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,7 +33,7 @@ msgstr ""
 #. Main menu item
 #: ../nobootloader.templates:4
 msgid "Continue without boot loader"
-msgstr "Fortsätt utan startladdare (boot loader)"
+msgstr "Fortsätt utan startprogram (boot loader)"
 
 #. Type: note
 #. Description
@@ -139,7 +139,7 @@ msgstr ""
 #. Description
 #: ../nobootloader.templates:50
 msgid "No boot loader installed"
-msgstr "Ingen startladdare (boot loader) är installerad"
+msgstr "Inget startprogram (boot loader) är installerat"
 
 #. Type: note
 #. Description
@@ -148,9 +148,9 @@ msgid ""
 "No boot loader has been installed, either because you chose not to or "
 "because your specific architecture doesn't support a boot loader yet."
 msgstr ""
-"Ingen startladdare (boot loader) har installerats, antingen för att du valde "
-"att inte göra det eller för att din specifika arkitektur inte stödjer en "
-"startladdare (boot loader)."
+"Inget startprogram (boot loader) har installerats, antingen för att du valde "
+"att inte göra det eller för att din specifika arkitektur inte har stöd för "
+"ett startprogram."
 
 #. Type: note
 #. Description
