[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r35116

--- a/debian/po/sv.po
+++ b/debian/po/sv.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-02-17 20:18+0100\n"
+"PO-Revision-Date: 2006-02-25 00:50+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -99,7 +99,7 @@ msgid ""
 "You can abort this by pressing any key. You will then be dropped into the "
 "NeTTrom command system where you have to execute the following commands:"
 msgstr ""
-"Vissa variabler behöver konfigureras i Netwinder NeTTrom's fasta program "
+"Vissa variabler behöver konfigureras i Netwinder NeTTroms fasta program "
 "(firmware) för att ditt system ska kunna starta Linux automatiskt.  Vid "
 "slutet av den här installationsfasen kommer ditt system att starta om och "
 "det fasta programmet kommer att försöka att starta datorn automatiskt. Du "
