Show the correct path of the kernel when no separate boot partition has been chosen on Netwinder.  Closes: #345320.
r35325

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nobootloader (1.08) UNRELEASED; urgency=low
+
+  [ Martin Michlmayr ]
+  * Show the correct path of the kernel when no separate boot partition has
+    been chosen on Netwinder.  Closes: #345320.
+
+ -- Martin Michlmayr <tbm@cyrius.com>  Tue, 07 Mar 2006 21:38:16 +0000
+
 nobootloader (1.07) unstable; urgency=low
 
   [ Updated translations ]
