--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-nobootloader (1.08) UNRELEASED; urgency=low
+nobootloader (1.08) unstable; urgency=low
 
   [ Martin Michlmayr ]
   * Show the correct path of the kernel when no separate boot partition has
     been chosen on Netwinder.  Closes: #345320.
 
- -- Martin Michlmayr <tbm@cyrius.com>  Tue, 07 Mar 2006 21:38:16 +0000
+  [ Updated translations ]
+  * Catalan (ca.po) by Jordi Mallach
+  * Hungarian (hu.po) by SZERVÑC Attila
+  * Slovenian (sl.po) by Matej Kovačič
+  * Swedish (sv.po) by Daniel Nylander
+
+ -- Martin Michlmayr <tbm@cyrius.com>  Sun, 12 Mar 2006 05:11:01 +0000
 
 nobootloader (1.07) unstable; urgency=low
 
