--- a/debian/po/hu.po
+++ b/debian/po/hu.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-18 18:32-0600\n"
-"PO-Revision-Date: 2006-02-07 17:03+0100\n"
+"PO-Revision-Date: 2006-03-12 08:08+0100\n"
 "Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
 "Language-Team: Debian L10n Hungarian <debian-l10n-hungarian@lists.debian>\n"
 "MIME-Version: 1.0\n"
@@ -61,7 +61,7 @@ msgstr ""
 #: ../nobootloader.templates:8
 msgid ""
 "Alternatively, you will be able to boot the kernel manually by entering :"
-msgstr "Ha viszont rendszermagját kézileg kívánja betölteni:"
+msgstr "A rendszermag kézzel is indítható lesz, így:"
 
 #. Type: note
 #. Description
@@ -145,11 +145,9 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../nobootloader.templates:50
-#, fuzzy
 msgid ""
 "You will need to boot manually with the ${KERNEL} kernel on partition "
 "${BOOT} and ${ROOT} passed as a kernel argument."
 msgstr ""
-"A rendszert kézzel kell indítania: a megfelelő partíción (${BOOT}) levő "
-"${KERNEL} rendszermagnak adja meg paraméterül a fájlrendszer gyökerét "
-"(${ROOT})."
+"A rendszert kézzel kell indítani a ${BOOT} partíción lévő ${KERNEL} "
+"rendszermaggal a ${ROOT}-t átadva annak argumentumaként."
